feature: Extend device stats with message Type
Details:
- Log metrics of devices JoinRequest, JoinAccept, UnconfirmedDatadown, ConfirmedDataDown,
UnconfirmedDataUp, ConfirmedDataUp.
